fixed-overflow
margin created horizontal scroll bar, fixed it

--- a/style.css
+++ b/style.css
@@ -156,7 +156,8 @@ h3 {
 .grid img {
   width: 100% !important;
   height: auto !important;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /*.video-wrapper iframe {
